@@ -46,6 +46,9 @@
       corresponding metadata field, and logical arguments
       \code{timestamp} and \code{producer} to optionally omit the
       respective metadata.  (Thanks to \I{Edzer Pebesma}.)
+
+      \item \code{grDevices::glyphInfo()} gains \code{rot} argument
+      to allow per-glyph rotation.   (Thanks to \I{Daniel Sabanes Bove}.)
     }
   }
 
